crates/monochange_integration_tests/tests/snapshots/bump_propagation__breaking_source_follows_clamped_inheritance_and_floors.snap
---
source: crates/monochange_integration_tests/tests/bump_propagation.rs
expression: plan_decisions(&json)
---
{
  "decisions": [
    {
      "bump": "major",
      "package": "core",
      "planned_version": "2.0.0",
      "trigger": "direct-change",
      "upstream_sources": [
        "cargo:crates/core/Cargo.toml"
      ]
    },
    {
      "bump": "minor",
      "package": "engine",
      "planned_version": "1.1.0",
      "trigger": "transitive-dependency",
      "upstream_sources": [
        "cargo:crates/core/Cargo.toml"
      ]
    },
    {
      "bump": "patch",
      "package": "leaf",
      "planned_version": "1.0.1",
      "trigger": "direct-change",
      "upstream_sources": [
        "cargo:crates/leaf/Cargo.toml"
      ]
    },
    {
      "bump": "none",
      "package": "standalone",
      "planned_version": null,
      "trigger": "none",
      "upstream_sources": []
    },
    {
      "bump": "patch",
      "package": "summary",
      "planned_version": "1.0.1",
      "trigger": "transitive-dependency",
      "upstream_sources": [
        "cargo:crates/core/Cargo.toml"
      ]
    }
  ]
}
